--- a/sections/4-solucao-desenvolvida.tex
+++ b/sections/4-solucao-desenvolvida.tex
@@ -119,7 +119,23 @@ A classe \textit{App} também é responsável por definir o estilo de widgets ut
 
 
 \subsection{O arquivo config.json}\label{sec:solucao-desenvolvida}
-O arquivo \textit{config.json} é um arquivo importante desta arquitetura, ele é utilizado como arquivo de configuração, porém, suas informações não serão persistidas. O conteúdo deste arquivo será repassado para a aplicação como um objeto javascript e o usuário poderá adicionar propriedades a serem lidas pelos plugins. No entanto, as propriedades fornecidas no modelo desta arquitetura não devem ser removidas. Tanto plugins como os componentes internos fazem uso das propriedades definidas neste arquivo, dentre os componentes pode-se citar, objetos visuais que lêem os valores das cores, tamanho da fonte (utilizado em textos), além de informações do serviço REST (url base) para o qual o aplicativo deverá se comunicar.
+O arquivo \textit{config.json} é um arquivo importante desta arquitetura, ele é utilizado como arquivo de configuração, porém, suas informações não serão persistidas. O conteúdo deste arquivo será repassado para a aplicação como um objeto javascript e o usuário poderá adicionar propriedades a serem lidas pelos plugins. No entanto, as propriedades fornecidas no modelo desta arquitetura não devem ser removidas. Tanto plugins como os componentes internos fazem uso das propriedades definidas neste arquivo. Os plugins poderão ler essa propriedade acessando \textit{Config.\_nome_da_propriedade}. As principais propriedades e seus possíveis valores serão descritos a seguir:
+
+\begin{itemize}
+	\item \textit{appName} (string): O nome do aplicativo. Este valor será setado em \textit{QApplication.setApplicationName} na inicialização do aplicativo;
+
+	\item \textit{appDescription} (string): Uma descrição sobre o aplicativo. Essa propriedade é opcional;
+
+	\item \textit{organizationName} (string): O nome da organização. Este valor será setado em \textit{QApplication.setOrganizationName} na inicialização do aplicativo e é será utilizado internamente pelo Qt para definir o nome do diretório de configurações da aplicação;
+
+	\item \textit{organizationDomain} (string): O domínio da organização, como por exemplo \textit{qt.project.org}. É utilizado pelo Qt internamente.
+
+	\item \textit{applicationStyle} (string): O nome do estilo a ser aplicado nos widgets (\textit{Button}, \textit{TabBar}, \textit{ToolTip} e etc.). Os possíveis valores são: \textit{Material}, \textit{Universal} e \textit{Default}. O valor dessa propriedade será passada pelo objeto \textit{App} para \textit{QQuickStyle.setStyle};
+
+	\item \textit{forceEulaAgreement} (boolean): Um valor boleano que inidica se a aplicação exibirá para o usuário uma página contendo os termos de uso do aplicativo. Caso seja setado para \textit{true}, o arquivo \textit{assets/eula.html} será carregado e exibido na página incial, na inicialização do aplicativo;
+
+	\item \textit{hasLogin} (boolean):
+\end{itemize}
 
 
 O arquivo \textit{config.json} que contém propriedades requeridas pela aplicação será registrado no contexto da aplicação como um objeto javascript identificado por \textit{Config}, apenas como leitura.
